<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.atta.cicshuttle.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.atta.cicshuttle.ui.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_routeDetailsFragment"
            app:destination="@id/routeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.atta.cicshuttle.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/routeDetailsFragment"
        android:name="com.atta.cicshuttle.ui.RouteDetailsFragment"
        android:label="fragment_route_details"
        tools:layout="@layout/fragment_route_details" >
        <argument
            android:name="route"
            app:argType="com.atta.cicshuttle.model.Route" />
    </fragment>
</navigation>